--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 
   <div class="row">
     <div class="column">
-      <img src="pgrid1.jpg" alt="decribe the image HERE for accessibility purposes">
-      <img src="pgrid2.jpg" alt="decribe the image HERE for accessibility purposes">
+      <img src="pgrid1.jpg" alt="picture of me and my soccer team during a street soccer tournament">
+      <img src="pgrid2.jpg" alt="me on at the peak of Mount Bierstadt">
     </div>
     <div class="column">
-      <img src="pgrid3.jpg" alt="decribe the image HERE for accessibility purposes">
-      <img src="pgrid4.jpg" alt="decribe the image HERE for accessibility purposes">
+      <img src="pgrid3.jpg" alt="me and my friends at the Rocky statue in Philadelphia">
+      <img src="pgrid4.jpg" alt="My sisters and Mom around the table at Thanksgiving">
     </div>
     <div class="column">
-      <img src="pgrid5.jpg" alt="decribe the image HERE for accessibility purposes">
-      <img src="pgrid6.jpg" alt="decribe the image HERE for accessibility purposes">
+      <img src="pgrid5.jpg" alt="A close up image of my kitten Misty">
+      <img src="pgrid6.jpg" alt="A photo of me and my mentor at Amazon Web Services in front of Amazon Logo">
     </div>
   </div>
 
@@ -88,7 +88,7 @@
 
   <!--Replace the image here. You can also control max-image width%.-->
   <div>
-    <img src="pikes_peak.jpg" alt="decribe the image HERE for accessibility purposes" class="center-image"
+    <img src="pikes_peak.jpg" alt="Black and white of me and my friend at Pikes Peak" class="center-image"
       style="max-width:30%; max-height:30%;">
   </div>
   <br>
@@ -115,7 +115,7 @@
   <br>
 
   <div>
-    <img src="street_art.jpg" alt="decribe the image HERE for accessibility purposes" class="center-image"
+    <img src="street_art.jpg" alt="Interesting street art from Rino District in Denver Colorado" class="center-image"
       style="max-width:50%; max-height:50%;">
   </div>
   <br>
