--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="hero-image">
     <div class="hero-text">
       <h1>I am Julian</h1>
-      <h2>Computer Science Major at the University of Pittsburgh</h2>
+      <h2>I am interested in creating useful, intuitive applications</h2>
     </div>
   </div>
 
@@ -34,9 +34,7 @@
   <div class="textblock" style="text-align: left">
     <h1>Introduce Yourself</h1>
     <h2>Currently, I am a student at the University of Pittsburgh studying Computer Science. Some courses I am taking
-      right now are Artificial Intelligence and Linguistics. While I want to go into industry focusing on
-      backend/fullstack development the field of AI is another interest of mine and I am using this semester to explore
-      it.</h2>
+      right now are Web Development and Linguistics. I want to learn how to create impactful useful applications that are very user friendly. Outside of school I love playing soccer, hiking and listening to music</h2>
   </div>
 
   <br>
